# QECInterpreter

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: python_test_build.yml
src/: definitions.py  examples.ipynb  examples.md
src/qce_interp/: __init__.py  custom_exceptions.py  data_manager.py  definitions.py  examples.ipynb  examples.md  simulated_data_manager.py
src/qce_interp/decoder_examples/: lookup_table.py  majority_voting.py  mwpm_decoders.py
src/qce_interp/interface_definitions/: intrf_channel_identifier.py  intrf_connectivity_surface_code.py  intrf_data_manager.py  intrf_error_identifier.py  intrf_stabilizer_index_kernel.py  intrf_state_classification.py  intrf_syndrome_decoder.py
src/qce_interp/utilities/: connectivity_surface_code.py  custom_context_manager.py  custom_exceptions.py  expected_parities.py  geometric_definitions.py  initial_state_manager.py  kernel_repetition_code.py  readwrite_hdf5.py  serialize_error_identifier.py
src/qce_interp/visualization/: __init__.py  plot_combined_logical_fidelity.py  plot_defect_rate.py  plot_logical_fidelity.py  plot_pij_matrix.py  plot_post_selection_fraction.py  plot_state_classification.py  plot_state_distribution.py  plotting_functionality.py
tests/: run_coverage.py  test_error_identifier.py  test_simulated_data_manager.py  test_template.py
tests/interface_definitions/: test_error_identifier.py  test_state_classification.py
tests/utilities/: test_expected_parities.py  test_kernel_repetition_code.py
tests/visualization/: test_plot_state_classification.py
