[metadata]
name = qceinterpreter
version = 0.1.0
author = S.L.M.vanderMeer
author_email = seanmeer@gmail.com
maintainer = S.L.M.vanderMeer
url = https://github.com/MiniSean/QECInterpreter
description = Functionality for reading and interpreting quantum error correction experiments performed in DiCarlo-lab using PycQED.
long_description = file: README.md

[options]
# find:
packages = find:
# Package inside dir
package_dir=
    =src
# Required library installations
install_requires =
    numpy
    xarray
    matplotlib>=3.3.4  # To include subplot_mosaic
    tqdm
    h5py
    scikit-learn
    multipledispatch
# Required additional data files
zip_safe = True
include_package_data = True

[options.packages.find]
where=src
